tests/algorithms/x/Scala/maths/fast_inverse_sqrt.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/maths/fast_inverse_sqrt.scala:52: error: not found: value i
    i = BigInt(0)
    ^
/workspace/mochi/tests/algorithms/x/Scala/maths/fast_inverse_sqrt.scala:54: error: not found: value i
    while (i < m) {
           ^
/workspace/mochi/tests/algorithms/x/Scala/maths/fast_inverse_sqrt.scala:56: error: not found: value i
      i = i + BigInt(1)
      ^
three errors found
